@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2010  Vasco Nunes, Piotr Ożarowski
 
 
+2010-03-12  Michael Jahn
+	* updated movie plugin DVDPalace
+
 2010-03-04  Michael Jahn
 	* new import plugin: GriffithXML
 
